<resources>
    <string name="app_name">Screen Elements</string>
    <string name="main_message">What do you prefer on Spotify?</string>
    <string name="podcasts">Podcasts</string>
    <string name="videos">Videos</string>
    <string name="vote_button">Vote</string>
    <string name="voted_text">You voted at %s</string>
    <string name="are_you_sure">Are you sure about %s?</string>
    <string name="warning">Just one more thing!</string>
    <string name="yes">Yes</string>
    <string name="no">No way</string>
    <string name="vote_success">Successfully voted!</string>
    <string name="vote_failed">Well, you can always try again!</string>
    <string name="rate_us">Would you like to rate us?</string>
    <string name="rate_attributed">You attributed us %s.</string>
    <string name="play_song_message">Through only one click, we play your favorite song!</string>
    <string name="play_song_button">Play</string>
    <string name="pause_song_button">Pause</string>
    <string name="animal_song_activity_label">Animals\' Songs</string>
    <string name="animal_song_instruction_label">Click to listen your animals!</string>
    <string name="music_player_top_label">Music Player</string>
</resources>
