<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.senai.screenelements.RelativeLayout">

    <TextView
        android:id="@+id/tvSongMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/play_song_message"
        android:textAlignment="center" />

    <ToggleButton
        android:id="@+id/btnPlaySong"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSongMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:checked="false"
        android:text="@string/play_song_button"
        android:textOff="@string/play_song_button"
        android:textOn="@string/pause_song_button" />
</RelativeLayout>
