<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="br.com.senai.screenelements.StartActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/ivEnterpriseLogo"
        android:layout_width="132dp"
        android:layout_height="125dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvMainMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153"
        app:srcCompat="@drawable/spotify_logo_mdpi" />

    <TextView
        android:id="@+id/tvMainMessage"
        android:layout_width="355dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/main_message"
        android:textAlignment="center"
        android:textColor="@color/standardGray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/rbVideos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/rbPodcasts"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/podcasts"
        android:textAlignment="center"
        android:textColor="@color/standardGray"
        app:layout_constraintBottom_toBottomOf="@+id/rbVideos"
        app:layout_constraintEnd_toStartOf="@+id/rbVideos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rbVideos"
        app:layout_constraintVertical_bias="1.0" />

    <RadioButton
        android:id="@+id/rbVideos"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/videos"
        android:textAlignment="center"
        android:textColor="@color/standardGray"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rbPodcasts" />

    <Button
        android:id="@+id/btnVote"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:layout_marginBottom="196dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:elevation="24dp"
        android:text="@string/vote_button"
        android:textColor="@color/colorPrimaryDarkDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/sbRate"
        style="@android:style/Widget.DeviceDefault.Light.SeekBar"
        android:layout_width="186dp"
        android:layout_height="18dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:max="10"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/btnVote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/rate_us"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/sbRate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
